corrected code, and changed files to proper names

--- a/Code/Project 1/gcc_majoritarian.ipynb
+++ b/Code/Project 1/gcc_majoritarian.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,11 +17,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "df = pd.read_csv('president_county_candidate.csv')\n",
-    "df_geo = pd.read_csv('uscities.csv')\n"
+    "df = pd.read_csv('/Users/jiaxincui/Documents/GitHub/git-exercise-AllysonCui/Data/Kaggle/governors_county_candidate.csv')\n",
+    "df_geo = pd.read_csv('/Users/jiaxincui/Documents/GitHub/git-exercise-AllysonCui/Data/Other/uscities.csv')\n",
+    "pd.set_option('display.max_columns', None)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       state      county        candidate party   votes   won\n0   Delaware        Kent      John Carney   DEM   44352  True\n4   Delaware  New Castle      John Carney   DEM  191678  True\n8   Delaware      Sussex  Julianne Murray   REP   68435  True\n12   Indiana       Adams     Eric Holcomb   REP    9441  True\n15   Indiana       Allen     Eric Holcomb   REP   98406  True",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>state</th>\n      <th>county</th>\n      <th>candidate</th>\n      <th>party</th>\n      <th>votes</th>\n      <th>won</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Delaware</td>\n      <td>Kent</td>\n      <td>John Carney</td>\n      <td>DEM</td>\n      <td>44352</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Delaware</td>\n      <td>New Castle</td>\n      <td>John Carney</td>\n      <td>DEM</td>\n      <td>191678</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Delaware</td>\n      <td>Sussex</td>\n      <td>Julianne Murray</td>\n      <td>REP</td>\n      <td>68435</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>Indiana</td>\n      <td>Adams</td>\n      <td>Eric Holcomb</td>\n      <td>REP</td>\n      <td>9441</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>Indiana</td>\n      <td>Allen</td>\n      <td>Eric Holcomb</td>\n      <td>REP</td>\n      <td>98406</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['county'] = df['county'].str.replace(' County', '')\n",
+    "df.drop(df[df['won'] == False].index, inplace = True)\n",
+    "df.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1025 entries, 0 to 5140\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   state      1025 non-null   object\n",
+      " 1   county     1025 non-null   object\n",
+      " 2   candidate  1025 non-null   object\n",
+      " 3   party      1025 non-null   object\n",
+      " 4   votes      1025 non-null   int64 \n",
+      " 5   won        1025 non-null   bool  \n",
+      "dtypes: bool(1), int64(1), object(4)\n",
+      "memory usage: 49.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()\n"
    ],
    "metadata": {
     "collapsed": false
