Created a scatterplot on senate about REP vote vs total vote

--- a/Code/Project 1/gcc_majoritarian.ipynb
+++ b/Code/Project 1/gcc_majoritarian.ipynb
@@ -44,8 +44,8 @@
    ],
    "source": [
     "df['county'] = df['county'].str.replace(' County', '')\n",
-    "df.drop(df[df['won'] == False].index, inplace = True)\n",
-    "df.head()"
+    "df_winner = df.drop(df[df['won'] == False].index, inplace = True)\n",
+    "df_winner.head()"
    ],
    "metadata": {
     "collapsed": false
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "df.info()\n"
+    "df_winner.info()\n"
    ],
    "metadata": {
     "collapsed": false
