Project 1 finished coding

--- a/Code/Project 1/Project 1 Draft.ipynb
+++ b/Code/Project 1/Project 1 Draft.ipynb
@@ -105,7 +105,7 @@
     "pd.set_option('display.max_columns', None)\n",
     "df['county'] = df['county'].str.replace(' County', '')\n",
     "df.drop(df[df['won'] == False].index, inplace = True)\n",
-    "df_geo.drop(['city', 'city_ascii', 'state_id', 'county_fips', 'source', 'military', 'incorporated', 'timezone', 'ranking', 'zips', 'id'], axis = 1, inplace = True)\n",
+    "df_geo.drop(['city', 'city_ascii', 'state_id', 'county_fips', 'source', 'military', 'incorporated', 'timezone', 'ranking', 'zips', 'id', 'population', 'density'], axis = 1, inplace = True)\n",
     "df_geo.rename(columns={\"state_name\": \"state\", \"county_name\": \"county\"}, inplace = True)\n",
     "df_geo.drop_duplicates(\n",
     "  subset = ['state', 'county'],\n",
@@ -171,24 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 51 entries, 0 to 50\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column             Non-Null Count  Dtype \n",
-      "---  ------             --------------  ----- \n",
-      " 0   state              51 non-null     object\n",
-      " 1   party              51 non-null     object\n",
-      " 2   candidate          51 non-null     object\n",
-      " 3   # of counties won  51 non-null     int64 \n",
-      "dtypes: int64(1), object(3)\n",
-      "memory usage: 1.7+ KB\n"
-     ]
+     "data": {
+      "text/plain": "        state party     candidate  # of counties won\n0     Alabama   REP  Donald Trump                 54\n1      Alaska   REP  Donald Trump                 20\n2     Arizona   REP  Donald Trump                 10\n3    Arkansas   REP  Donald Trump                 67\n4  California   DEM     Joe Biden                 35",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>state</th>\n      <th>party</th>\n      <th>candidate</th>\n      <th># of counties won</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Alabama</td>\n      <td>REP</td>\n      <td>Donald Trump</td>\n      <td>54</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Alaska</td>\n      <td>REP</td>\n      <td>Donald Trump</td>\n      <td>20</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Arizona</td>\n      <td>REP</td>\n      <td>Donald Trump</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Arkansas</td>\n      <td>REP</td>\n      <td>Donald Trump</td>\n      <td>67</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>California</td>\n      <td>DEM</td>\n      <td>Joe Biden</td>\n      <td>35</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -198,7 +190,7 @@
     "  subset = ['state'],\n",
     "  keep = 'first', inplace = True)\n",
     "df_state1 = df_state1.reset_index(drop=True)\n",
-    "df_state1.info()"
+    "df_state1.head()"
    ],
    "metadata": {
     "collapsed": false
@@ -220,38 +212,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 115,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 4633 entries, 0 to 4632\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   state              4633 non-null   object \n",
-      " 1   county             4633 non-null   object \n",
-      " 2   total_votes        4633 non-null   int64  \n",
-      " 3   won                4633 non-null   bool   \n",
-      " 4   lat                2985 non-null   float64\n",
-      " 5   lng                2985 non-null   float64\n",
-      " 6   population         2985 non-null   float64\n",
-      " 7   density            2985 non-null   float64\n",
-      " 8   party              4633 non-null   object \n",
-      " 9   candidate          4633 non-null   object \n",
-      " 10  # of counties won  4633 non-null   int64  \n",
-      "dtypes: bool(1), float64(4), int64(2), object(4)\n",
-      "memory usage: 402.7+ KB\n"
-     ]
+     "data": {
+      "text/plain": "                  state      county  total_votes   won      lat      lng  \\\n0              Delaware        Kent        87025  True  39.1610 -75.5202   \n1              Delaware  New Castle       287633  True  39.7415 -75.5416   \n2              Delaware      Sussex       129352  True  38.9091 -75.4227   \n3  District of Columbia      Ward 1        41681  True  38.9072 -77.0369   \n4  District of Columbia      Ward 2        32881  True  38.9063 -77.0340   \n\n   population  density party  candidate  # of counties won  \n0    125931.0    617.0   DEM  Joe Biden                  2  \n1     70655.0   2503.0   DEM  Joe Biden                  2  \n2     11463.0    449.0   DEM  Joe Biden                  2  \n3     82404.0  12910.0   DEM  Joe Biden                  8  \n4     76492.0   4624.0   DEM  Joe Biden                  8  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>state</th>\n      <th>county</th>\n      <th>total_votes</th>\n      <th>won</th>\n      <th>lat</th>\n      <th>lng</th>\n      <th>population</th>\n      <th>density</th>\n      <th>party</th>\n      <th>candidate</th>\n      <th># of counties won</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Delaware</td>\n      <td>Kent</td>\n      <td>87025</td>\n      <td>True</td>\n      <td>39.1610</td>\n      <td>-75.5202</td>\n      <td>125931.0</td>\n      <td>617.0</td>\n      <td>DEM</td>\n      <td>Joe Biden</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Delaware</td>\n      <td>New Castle</td>\n      <td>287633</td>\n      <td>True</td>\n      <td>39.7415</td>\n      <td>-75.5416</td>\n      <td>70655.0</td>\n      <td>2503.0</td>\n      <td>DEM</td>\n      <td>Joe Biden</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Delaware</td>\n      <td>Sussex</td>\n      <td>129352</td>\n      <td>True</td>\n      <td>38.9091</td>\n      <td>-75.4227</td>\n      <td>11463.0</td>\n      <td>449.0</td>\n      <td>DEM</td>\n      <td>Joe Biden</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>District of Columbia</td>\n      <td>Ward 1</td>\n      <td>41681</td>\n      <td>True</td>\n      <td>38.9072</td>\n      <td>-77.0369</td>\n      <td>82404.0</td>\n      <td>12910.0</td>\n      <td>DEM</td>\n      <td>Joe Biden</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>District of Columbia</td>\n      <td>Ward 2</td>\n      <td>32881</td>\n      <td>True</td>\n      <td>38.9063</td>\n      <td>-77.0340</td>\n      <td>76492.0</td>\n      <td>4624.0</td>\n      <td>DEM</td>\n      <td>Joe Biden</td>\n      <td>8</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df_state2 = df20.copy()\n",
     "df_state2.drop(['candidate'], axis = 1, inplace = True)\n",
     "df_state2.drop(['party'], axis = 1, inplace = True)\n",
-    "df_state2 = pd.merge(df_state2, df_state1, on = 'state', how = 'left')"
+    "df_state2 = pd.merge(df_state2, df_state1, on = 'state', how = 'left')\n",
+    "df_state2.head()"
    ],
    "metadata": {
     "collapsed": false
