--- a/Code/Project 1/test.ipynb
+++ b/Code/Project 1/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -14,6 +14,32 @@
     "import seaborn as sns\n",
     "import plotly.express as px"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  Party     Candidate  Fabricated Votes    Won\n0   DEM  Donald Trump              3333   True\n1   REP     Joe Biden               999  False\n2   LIB  Jo Jorgensen                45  False",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Party</th>\n      <th>Candidate</th>\n      <th>Fabricated Votes</th>\n      <th>Won</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>DEM</td>\n      <td>Donald Trump</td>\n      <td>3333</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>REP</td>\n      <td>Joe Biden</td>\n      <td>999</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>LIB</td>\n      <td>Jo Jorgensen</td>\n      <td>45</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_1 = [\n",
+    "                    ['DEM', 'Donald Trump', 3333, 3333>999],\n",
+    "                    ['REP', 'Joe Biden', 999, 3333<999],\n",
+    "                    ['LIB', 'Jo Jorgensen', 45, 3333<45]\n",
+    "                    ]\n",
+    "pd.DataFrame(result_1, columns=['Party', 'Candidate', 'Fabricated Votes', 'Won'])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
