--- a/Code/Project 1/Project 1.ipynb
+++ b/Code/Project 1/Project 1.ipynb
@@ -550,7 +550,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Under this system, each county has the same number of votes as its number of voters and casts all of its votes on the party (candidate) that won the majority of votes. In this scenario, Joe Biden emerged as the winner. This can be attributed to the fact that Biden was able to secure the majority of votes in a number of counties, thereby gaining a significant number of electoral votes. Additionally, Biden's strong performance in densely populated urban areas, where he received a high number of votes, has played a role in his win."
+    "Under this system, each county has the same number of votes as its number of voters and casts all of its votes on the party (candidate) that won the majority of votes. In this scenario, Joe Biden emerged as the winner. This can be attributed to the fact that Biden was able to secure the majority of votes in a number of megacities, thereby gaining a significant number of electoral votes. Although Trump won large number of counties, the population still doesn't add up to the level of the population from megacities, therefore he lost."
    ],
    "metadata": {
     "collapsed": false
@@ -621,7 +621,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Under this system, each county has only one vote and casts its vote on the party (candidate) that won the majority of votes. Donald Trump emerged as the winner under this system. This can be due to his strong performance in rural areas, where he received a high number of votes, as well as in several smaller counties, where he was able to secure a majority. Additionally, Trump's performance in states that traditionally vote Republican may have also contributed to his win."
+    "Under this system, each county has only one vote and casts its vote on the party (candidate) that won the majority of votes. Donald Trump emerged as the winner under this system. Since all counties are weighted equally, the fact that Trump is popular with small counties and in several smaller counties, enabled him to secure a majority. Trump's performance in states that traditionally vote Republican has also contributed to his win."
    ],
    "metadata": {
     "collapsed": false
@@ -698,7 +698,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Under this system, each state has the same number of votes as its number of voters and casts all of its votes on the party (candidate) that won the majority of counties. Donald Trump emerged as the winner under this system. This can be attributed to his strong performance in a number of states, where he was able to secure the majority of counties. Additionally, the higher number of rural counties in certain states, where Trump performed well, may have also played a role in his win."
+    "Under this system, each state has the same number of votes as its number of voters and casts all of its votes on the party (candidate) that won the majority of counties. Donald Trump emerged as the winner under this system. Since the number of counties where Trump is popular surpasses the number of cities where Biden is popular in almost every state, except for certain states that are Democrat's conservative base. In the general case, the higher number of rural counties in most states where Trump performed well played a crucial role in his win."
    ],
    "metadata": {
     "collapsed": false
@@ -775,7 +775,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Under this system, each state has only one vote and casts its vote on the party (candidate) that won the majority of counties. Donald Trump emerged as the winner under this system as well. This can be due to his strong performance in a number of states, where he was able to secure the majority of counties. Additionally, the fact that several states have a higher number of rural counties, where Trump performed well, may have also contributed to his win."
+    "Under this system, each state has only one vote and casts its vote on the party (candidate) that won the majority of counties. Donald Trump emerged as the winner under this system as well. This can be due to his strong performance in a number of states, where he was able to secure the majority of counties. Compared the situation in System III, the ratio compared between Biden and Trump is down slightly, as the high number of votes from major cities are also directed to the counting."
    ],
    "metadata": {
     "collapsed": false
