--- a/Code/Project 1/Project 1 Draft.ipynb
+++ b/Code/Project 1/Project 1 Draft.ipynb
@@ -577,7 +577,40 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "df_state_plot = df_state_won.copy()\n",
+    "df_state_plot.rename(columns={\n",
+    "    'share of counties in the winning states': 'share of counties in the states'},\n",
+    "                     inplace=True)\n",
+    "df_state_plot1 = df_state_lost.copy()\n",
+    "df_state_plot1.rename(columns={\n",
+    "    'share of counties in the losing states': 'share of counties in the states'},\n",
+    "                      inplace=True)\n",
+    "df_state_plot = pd.concat([df_state_plot, df_state_plot1])\n",
+    "#df_state_plot\n",
+    "#plt.figure(figsize = (20,15))\n",
+    "#sns.scatterplot(data = df_state_plot, x = \"# of counties won\", y = '# of total counties', hue = \"won\", size = \"# of counties won\", palette = \"coolwarm\", sizes=(10,200))\n",
+    "#plt.title(\"2020 Trump Voting On State Level\")\n",
+    "plt.figure(figsize=(20, 15))\n",
+    "sns.scatterplot(data=df_state_plot, x=\"share of counties in the states\",\n",
+    "                y='# of counties won', hue=\"won\", size=\"# of total counties\",\n",
+    "                palette=\"coolwarm\", sizes=(10, 200))\n",
+    "plt.title(\"2020 Trump Voting On State Level\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (14,10))\n",
+    "sns.scatterplot(data = df_state_mainland, x = \"lng\", y = \"lat\", hue = \"party\", size = \"total_votes\",\n",
+    "                sizes = (20, 20), palette = ['blue', 'red'])\n",
+    "plt.title(\"Electoral System IV\");\n"
+   ],
    "metadata": {
     "collapsed": false
    }
