--- a/Code/Project 1/Project 1 Draft.ipynb
+++ b/Code/Project 1/Project 1 Draft.ipynb
@@ -614,6 +614,61 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "From Project 2: map for III"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(14, 8))\n",
+    "gpd_state.plot(\n",
+    "    ax=ax, edgecolor='black', column='party', legend=True, cmap='RdBu_r',\n",
+    "    vmin=0, vmax=1,\n",
+    "    alpha=gpd_state['total_votes'] / gpd_state['total_votes'].max()\n",
+    ")\n",
+    "for idx, row in gpd_state.iterrows():\n",
+    "    name = row['STUSPS']\n",
+    "    if name in ['VT', 'NH', 'MA', 'RI', 'CT', 'NJ', 'MD', 'DE', 'DC', 'CA']:\n",
+    "        coords = row.geometry.centroid.coords[0]\n",
+    "        if name in ['MA', 'NH', 'JE']:\n",
+    "            ax.annotate(text=name, xy=coords, xytext=(coords[0]+3, coords[1]-1),\n",
+    "                        ha='center', fontsize=14, arrowprops=dict(arrowstyle=\"-\", color='black', linewidth=2))\n",
+    "        elif name in ['VT']:\n",
+    "            ax.annotate(text=name, xy=coords, xytext=(coords[0]-1, coords[1]+2),\n",
+    "                        ha='center', fontsize=14, arrowprops=dict(arrowstyle=\"-\", color='black', linewidth=2))\n",
+    "        elif name in ['NJ']:\n",
+    "            ax.annotate(text=name, xy=coords, xytext=(coords[0]+1.5, coords[1]-0.5),\n",
+    "                        ha='center', fontsize=14, arrowprops=dict(arrowstyle=\"-\", color='black', linewidth=2))\n",
+    "        elif name in ['RI', 'DC']:\n",
+    "            ax.annotate(text=name, xy=coords, xytext=(coords[0]+3, coords[1]-2),\n",
+    "                        ha='center', fontsize=14, arrowprops=dict(arrowstyle=\"-\", color='black', linewidth=2))\n",
+    "        elif name in ['CT']:\n",
+    "            ax.annotate(text=name, xy=coords, xytext=(coords[0]+2, coords[1]-2),\n",
+    "                        ha='center', fontsize=14, arrowprops=dict(arrowstyle=\"-\", color='black', linewidth=2))\n",
+    "        elif name in ['DE']:\n",
+    "            ax.annotate(text=name, xy=coords, xytext=(coords[0]+2, coords[1]-0.5),\n",
+    "                        ha='center', fontsize=14, arrowprops=dict(arrowstyle=\"-\", color='black', linewidth=2))\n",
+    "        elif name in ['CA']:\n",
+    "            ax.annotate(text=name, xy=coords, xytext=(coords[0]+3, coords[1]-2),\n",
+    "                        ha='center', fontsize=14, arrowprops=dict(arrowstyle=\"-\", color='white', linewidth=2))\n",
+    "    else:\n",
+    "        ax.annotate(text=name, xy=row.geometry.centroid.coords[0], ha='center', fontsize=14)\n",
+    "ax.axis('off')\n",
+    "plt.title(\"Electoral System IV\")\n",
+    "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
