--- a/Code/Project 1/OLS.ipynb
+++ b/Code/Project 1/OLS.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np; np.random.seed(42)\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import geopandas as gpd\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re\n",
+    "%matplotlib inline\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.iolib.summary2 import summary_col\n",
+    "from linearmodels.iv import IV2SLS\n",
+    "from stargazer.stargazer import Stargazer\n",
+    "from IPython.core.display import HTML"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "1. Voter Turnout ~ income standard deviation, area of land per capita, unemployment rate"
@@ -13,7 +37,10 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "df_income = pd.read_csv('/Users/jiaxincui/Documents/GitHub/git-exercise-AllysonCui/Data/Other/income.csv')\n",
+    "df_income.head()"
+   ],
    "metadata": {
     "collapsed": false
    }
